# Aoc2025

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
aoc2025/: aoc.py  cli.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
tests/: test_aoc2025.py
tests/data/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml  08.yaml  09.yaml  10.yaml  11.yaml  12.yaml
